--- a/style.css
+++ b/style.css
@@ -1,26 +1,92 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap');
 body{
-    text-align: center;
     background-color: rebeccapurple;
     color: #fff;
+    font-family: 'Poppins', sans-serif;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    padding-top: 50px;
 }
 h1{
     font-size: 50px;
-    margin: 30px;
-}
-h2{
-    font-size: 30px;
     margin-bottom: 20px;
-}
-button{
-    padding: 10px;
-    color: white;
-    background-color: rebeccapurple;
-    border-radius: 4px;
-    border: 2px solid black;
-    font-family: inherit;
+    text-shadow: 0px 0px 10px rgb(0, 0, 0, 0.2);
 }
 input[type=text]{
-    padding: 10px;
-    border-radius: 4px;
+    width: 100%;
+    border-radius: 10px 10px 0 0;
     border: 2px solid black;
+    padding: 20px;
+    width: 300px;
+    font-size: 16px;
+    outline: none;
+    box-shadow: 0px 0px 10px rgb(0, 0, 0, 0.2);
+}
+.container{
+    width: 344px;
+    flex-direction: column;
+}
+#todoList{
+    color: black;
+}
+#todoList li{
+    display: flex;
+    flex-direction: row;
+    align-content: center;
+    justify-content: space-between;
+    line-height: 35px;
+    user-select: none;
+}
+#todoList li:last-child{
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 0 0 10px 10px;
+    border: 2px solid black;
+    box-shadow: 0px 0px 10px rgb(0, 0, 0, 0.2);
+}
+#todoList li:not(:last-child){
+    background-color: #fff;
+    padding: 20px;
+    border: 2px solid black;
+    box-shadow: 0px 0px 10px rgb(0, 0, 0, 0.2);
+}
+button{
+    border: none;
+    background-color: #fff;
+    padding: 0;
+}
+img{
+    height: 15px;
+    padding: 5px;
+    border: 2px solid black;
+    margin: 0;
+    border-radius: 4px;
+    margin: 0 2px;
+}
+.buttons{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+}
+img[src="src/check.svg"]{
+    border-color: green;
+}
+img[src="src/delete.svg"]{
+    border-color: red;
+}
+button{
+    outline: 0;
+    cursor: pointer;
+}
+.checked{
+    text-decoration: line-through;
+    color: rgb(0, 0, 0, 0.3);
+}
+p:first-of-type{
+    margin-top: 15px;
+}
+p{
+    margin: 2px 0;
+    font-size: 12px;
 }
